force-app/main/default/objects/dlrs__LookupRollupSummaryLog__c/dlrs__LookupRollupSummaryLog__c.object-meta.xml
<CustomObject>
    <label>Lookup Rollup Summary Log</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Lookup Rollup Summary Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lookup Rollup Summary Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>