force-app/main/default/objects/dlrs__LookupRollupSummaryLog__c/fields/dlrs__ParentId__c.field-meta.xml
<CustomField>
    <fullName>dlrs__ParentId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Parent Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>