force-app/main/default/objects/dlrs__LookupRollupSummaryLog__c/fields/dlrs__ParentObject__c.field-meta.xml
<CustomField>
    <fullName>dlrs__ParentObject__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Parent Object</label>
    <length>60</length>
    <type>Text</type>
</CustomField>